feat: skill trajectory, resume battle, roadmap, quiz overhaul, bug fixes, cleanup
- Add Skill Trajectory (My Progress panel) - tracks domain scores across resume uploads
- Add Resume Battle - admin head-to-head candidate comparison for any job
- Enhanced roadmap with 30+ skill-specific actionable learning steps
- Role-specific technical quiz (C++, Java Spring, Python/Data, React, DevOps, SQL)
- Fix resume upload param mismatch (uid -> userId)
- Fix profile update param mismatch (f_name -> full_name)
- Fix Export PDF broken URL (/resume/export -> /resume/get_pdf)
- Fix H2 CLOB issue - resume_text now stored as VARCHAR(65535)
- Fix SELECT * uppercase key issue in list_all_jobs
- Fix matched_for 500 error with full error handling
- Add password hashing (SHA-256) with auto-migration of existing passwords
- Add miss field to job matching response
- Add roadmap field to job matching response
- Remove 22 unused files (14 util classes, 5 model classes, 1 controller, 3 old DB files)
- Add resume snapshot table for trajectory tracking
- C/C++ implied skills (pointers, STL auto-matched)